bsdjail: fix kernel panic when using clone_ns
CLONE_NEWNS is used as a parameter to be pass into clone
by clone_ns, but the corresponding codes in bsdjail.c is
disabled by default. Based on the comments from bsdjail
author, to enable these codes can avoid kernel crash.

Signed-off-by: Zumeng Chen <zumeng.chen@windriver.com>

--- a/security/Kconfig
+++ b/security/Kconfig
@@ -244,5 +244,16 @@ config SECURITY_BSDJAIL
 	  
 	  If you are unsure how to answer this question, answer N.
 
+config SECURITY_BSDJAIL_USE_NAMESPACE
+	bool "Copying name space"
+	depends on SECURITY_BSDJAIL
+	default y
+	help
+	  This could be useful, so that future mounts outside the jail
+	  don't affect the jail.  But it's not necessary, and requires
+	  exporting copy_namespace from fs/namespace.c, Actually, it
+	  would also be useful for truly hiding information about mounts
+	  which do not exist in this jail.
+
 endmenu
 
