powerpc: update compilation flags to support e5500 instructions
ptrace.c compiled failed via GCC4.4a-329:

  CC      arch/powerpc/kernel/prtace.o
{standard input}: Assembler messages:
{standard input}:1522: Error: junk at end of line: `1'
{standard input}:1977: Error: junk at end of line: `1'

 AS can not assemble  the "mfcr"  instruction correctly,
need pass " -mcpu=e5500 " to AS.

Signed-off-by: Yongli He <yongli.he@windriver.com>

[powepc/e5500: add with -mno-mfcrf work around to make e5500 work]
Signed-off-by: Tiejun Chen <tiejun.chen@windriver.com>

--- a/arch/powerpc/platforms/85xx/Kconfig
+++ b/arch/powerpc/platforms/85xx/Kconfig
@@ -274,8 +274,12 @@ config P5020_DS
 	select HAS_FSL_QBMAN
 	select HAS_FSL_PME
 	select FSL_HYDRA_DS_MDIO if PHYLIB
+	select WORKAROUND_E5500_MFCR
 	help
 	  This option enables support for the P5020 DS board
+
+config WORKAROUND_E5500_MFCR
+	bool
 
 endif # FSL_SOC_BOOKE
 
