--- a/arch/powerpc/boot/dts/p5020ds.dts
+++ b/arch/powerpc/boot/dts/p5020ds.dts
@@ -309,6 +309,60 @@
 			reg = <0 0 0x08000000>;
 			bank-width = <2>;
 			device-width = <2>;
+			#size-cells = <1>;
+			#address-cells = <1>;
+
+			partition@0 {
+				label = "rcw";
+				reg = <0x0 0x20000>;
+				read-only;
+			};
+			partition@20000 {
+				label = "kernel";
+				reg = <0x20000 0x500000>;
+			};
+			partition@520000 {
+				label = "dtb";
+				reg = <0x520000 0x20000>;
+			};
+			partition@540000 {
+				label = "fs1";
+				reg = <0x540000 0x3a40000>;
+			};
+			partition@3f80000 {
+				label = "alt-u-boot";
+				reg = <0x3f80000 0x80000>;
+				read-only;
+			};
+			partition@4000000 {
+				label = "alt-rcw";
+				reg = <0x4000000 0x20000>;
+				read-only;
+			};
+			partition@4020000 {
+				label = "fs2";
+				reg = <0x4020000  0x2fe0000>;
+			};
+			partition@7000000 {
+				label = "fman-firmware";
+				reg = <0x7000000 0x20000>;
+				read-only;
+			};
+			partition@7020000 {
+				label = "fs3";
+				reg = <0x7020000  0xf40000>;
+			};
+			partition@7f60000 {
+				label = "u-boot env";
+				reg = <0x7f60000  0x20000>;
+				read-only;
+			};
+			partition@7f80000 {
+				label = "u-boot";
+				reg = <0x7f80000 0x80000>;
+				read-only;
+			};
+
 		};
 
 		nand@2,0 {
