qman: remove support for non-stashing configurations.
Linux no longer needs support for portals whose stashing LIODNs aren't
configured, as there is a native PAMU driver. This commit simplifies
driver interfaces and makes upcoming features easier to implement. In
any case, if a later need for a non-coherent driver mode comes up, it
could be reintroduced in an easier manner than the current code which
is being removed.

Signed-off-by: Geoff Thorpe <Geoff.Thorpe@freescale.com>
Signed-off-by: Kumar Gala <galak@kernel.crashing.org>
[Kevin: Original patch taken from FSL
QorIQ-SDK-V1.2-SOURCE-20120614-yocto.iso image]
Signed-off-by: Kevin Hao <kexin.hao@windriver.com>

--- a/drivers/staging/fsl_qbman/Kconfig
+++ b/drivers/staging/fsl_qbman/Kconfig
@@ -107,6 +107,7 @@ if FSL_QMAN
 
 config FSL_QMAN_PORTAL
 	bool "Qman portal support"
+	depends on FSL_PAMU
 	default y
 	---help---
 	  Compiles support to detect and support Qman software corenet portals
@@ -149,16 +150,6 @@ config FSL_QMAN_NULL_FQ_DEMUX
 	  portal. If this option is selected, the driver will support this
 	  feature, but it adds a small overhead to the hottest-path in the
 	  driver, so it should be disabled unless needed.
-
-config FSL_QMAN_DQRR_PREFETCHING
-	bool "support prefetching or DQRR (if stashing disabled)"
-	default y
-	---help---
-	  Normally, portals are configured to stash DQRR entries, but if this is
-	  not the case, then s/w needs to invalidate and prefetch ring entries.
-	  Selecting this option supports both cases and chooses the best one at
-	  run-time, but introduces a small overhead in some hot paths of the
-	  driver, so disable it if you know stashing will be configured.
 
 config FSL_QMAN_CONFIG
 	bool "Qman device management"
