qbman: remove needless "options" from menuconfig
Now that it's possible to dynamically change "irqsource" behaviour of
portals, there's no need to be able to bake oddball defaults into the
driver. Likewise, there's no benefit to removing portal-sharing
support, particularly as doing so could lead to confusion for
customers. So hard-code these configuration options in Kconfig,
removing them from the "menuconfig" interface.

Signed-off-by: Geoff Thorpe <Geoff.Thorpe@freescale.com>
Signed-off-by: Kumar Gala <galak@kernel.crashing.org>
[Kevin: Original patch taken from FSL
QorIQ-SDK-V1.2-SOURCE-20120614-yocto.iso image]
Signed-off-by: Kevin Hao <kexin.hao@windriver.com>

--- a/drivers/staging/fsl_qbman/Kconfig
+++ b/drivers/staging/fsl_qbman/Kconfig
@@ -27,34 +27,18 @@ config FSL_DPA_CAN_WAIT_SYNC
 	default y
 
 config FSL_DPA_PIRQ_FAST
-	bool "fast-path processing via IRQ"
+	bool
 	depends on FSL_DPA_HAVE_IRQ
 	default y
-	---help---
-	  By default, configure fast-path handling to be triggered by IRQ.
-	  Drivers can modify this at run-time, but for linux it makes sense
-	  for all handling to be triggered by IRQ, unless a special
-	  run-to-completion application is being built.
 
 config FSL_DPA_PIRQ_SLOW
-	bool "slow-path processing via IRQ"
+	bool
 	depends on FSL_DPA_HAVE_IRQ
 	default y
-	---help---
-	  By default, configure slow-path handling to be triggered by IRQ.
-	  Drivers can modify this at run-time, but for linux it makes sense
-	  for all handling to be triggered by IRQ, unless a special
-	  run-to-completion application is being built.
 
 config FSL_DPA_PORTAL_SHARE
-	bool "allow portals to be affine to multiple CPUs"
+	bool
 	default y
-	---help---
-	  If the kernel, via its device-tree, will be required to use a
-	  single Qman or Bman portal for multiple CPUs, then select this
-	  option. Note however that compiling with this option will result
-	  in a very slight (but non-zero) overhead even when the feature
-	  is not being used.
 
 config FSL_DPA_UIO
 	tristate "Export USDPAA portals via UIO"
