powerpc/85xx: add eLBC error interrupt in dts for P5020
On P5020, eLBC error interrupts are routed to 0(ORed Error Interrupt),
eLBC event interrupts are routed to 9(ELBC), so add the error interrupt
in dts for P5020.

Signed-off-by: Shaohui Xie <Shaohui.Xie@freescale.com>
Signed-off-by: Kumar Gala <galak@kernel.crashing.org>
[Yongli: Original patch taken from FSL
    QorIQ-SDK-V1.2-SOURCE-20120614-yocto.iso image]
Integrated-by: Yongli He <yongli.he@windriver.com>

--- a/arch/powerpc/boot/dts/fsl/p5020si-post.dtsi
+++ b/arch/powerpc/boot/dts/fsl/p5020si-post.dtsi
@@ -33,8 +33,11 @@
  */
 
 &lbc {
-	compatible = "fsl,p5020-elbc", "fsl,elbc", "simple-bus";
-	interrupts = <25 2 0 0>;
+	compatible = "fsl,p5020-rev1.0-elbc", "simple-bus";
+	interrupts = <
+		25 2 0 0
+		16 2 1 19
+		>;
 	#address-cells = <2>;
 	#size-cells = <1>;
 };
