--- a/arch/powerpc/boot/dts/fsl/p4080si-pre.dtsi
+++ b/arch/powerpc/boot/dts/fsl/p4080si-pre.dtsi
@@ -72,6 +72,12 @@
 		rtic_c = &rtic_c;
 		rtic_d = &rtic_d;
 		sec_mon = &sec_mon;
+
+		bman = &bman;
+		qman = &qman;
+		pme = &pme;
+		fman0 = &fman0;
+		fman1 = &fman1;
 	};
 
 	cpus {
