powerpc/85xx: Add DPAA support to P5020 SoC device tree files
P5020 has PME, RMan, QMan, Bman, and a single FMAN with one 10g and five
1g ports.  We only support 6 of 7 the offline ports on FMan as we dont
have sufficient qman channels for ever FMAN user (10g-tx, 1g-tx,
offline).

Signed-off-by: Kumar Gala <galak@kernel.crashing.org>
[Yongli: Original patch taken from FSL
    QorIQ-SDK-V1.2-SOURCE-20120614-yocto.iso image]
Integrated-by: Yongli He <yongli.he@windriver.com>

--- a/arch/powerpc/boot/dts/fsl/p5020si-pre.dtsi
+++ b/arch/powerpc/boot/dts/fsl/p5020si-pre.dtsi
@@ -79,6 +79,12 @@
 		raideng_jr1 = &raideng_jr1;
 		raideng_jr2 = &raideng_jr2;
 		raideng_jr3 = &raideng_jr3;
+
+		bman = &bman;
+		qman = &qman;
+		pme = &pme;
+		rman = &rman;
+		fman0 = &fman0;
 	};
 
 	cpus {
