gianfar: Add BDs allocation in L2 SRAM option
If this option is enabled the driver will try to allocate the
buffer descriptors (BDs) in the L2 SRAM memory, using the
powerpc/85xx cache-sram support API for P1/P2 QorIQ platforms,
with the intent to improve its performance.
For this to work, SRAM size and the offset where SRAM should
be mapped must be provided at kernel command line as:
	cache-sram-size=<value>
	cache-sram-offset=<offset>
Should the attempt to allocate in L2 SRAM fail, the driver falls
back to normal allocation of BDs (i.e. in normal RAM).

Signed-off-by: Sandeep Gopalpet <sandeep.kumar@freescale.com>
Signed-off-by: Jiajun Wu <b06378@freescale.com>
Signed-off-by: Li Yang <leoli@freescale.com>
Signed-off-by: Akhil Goyal <akhil.goyal@freescale.com>
Signed-off-by: Claudiu Manoil <claudiu.manoil@freescale.com>
[Kevin: Original patch taken from FSL
QorIQ-SDK-V1.2-SOURCE-20120614-yocto.iso image. Just minor context
mods in order to port to 3.4 kernel.]
Signed-off-by: Kevin Hao <kexin.hao@windriver.com>

--- a/drivers/net/ethernet/freescale/Kconfig
+++ b/drivers/net/ethernet/freescale/Kconfig
@@ -87,6 +87,16 @@ config GIANFAR
 	  This driver supports the Gigabit TSEC on the MPC83xx, MPC85xx,
 	  and MPC86xx family of chips, and the FEC on the 8540.
 
+config GIANFAR_L2SRAM
+	bool "BDs in L2SRAM allocation"
+	depends on (GIANFAR && FSL_SOC_BOOKE)
+	select FSL_85XX_CACHE_SRAM
+	help
+	  This option supports the allocation of Buffer Descriptors in L2 SRAM.
+	  cache-sram-size and cache-sram-offset command line parameters should
+	  be passed accordingly, otherwise the driver will fall back to normal
+	  memory operation.
+
 config DPA
 	bool "Freescale Data Path Frame Manager Ethernet"
 	depends on FSL_SOC && FSL_BMAN_PORTAL && FSL_QMAN_PORTAL && FSL_FMAN
