--- a/drivers/staging/fsl_qbman/Makefile
+++ b/drivers/staging/fsl_qbman/Makefile
@@ -1,6 +1,6 @@
 # Bman
+obj-$(CONFIG_FSL_BMAN)		+= bman_high.o
 obj-$(CONFIG_FSL_BMAN_CONFIG)	+= bman_config.o bman_driver.o
-obj-$(CONFIG_FSL_BMAN_PORTAL)	+= bman_high.o
 obj-$(CONFIG_FSL_BMAN_TEST)	+= bman_tester.o
 obj-$(CONFIG_FSL_BMAN_DEBUGFS)  += bman_debugfs_interface.o
 bman_tester-y			 = bman_test.o
@@ -9,9 +9,8 @@ bman_tester-$(CONFIG_FSL_BMAN_TEST_THRESH) += bman_test_thresh.o
 bman_debugfs_interface-y	 = bman_debugfs.o
 
 # Qman
-obj-$(CONFIG_FSL_QMAN)		+= qman_utility.o qman_fqalloc.o
+obj-$(CONFIG_FSL_QMAN)		+= qman_high.o qman_utility.o qman_fqalloc.o
 obj-$(CONFIG_FSL_QMAN_CONFIG)	+= qman_config.o qman_driver.o
-obj-$(CONFIG_FSL_QMAN_PORTAL)	+= qman_high.o
 obj-$(CONFIG_FSL_QMAN_TEST)	+= qman_tester.o
 qman_tester-y			 = qman_test.o qman_test_hotpotato.o \
 					qman_test_high.o
