--- a/drivers/staging/fsl_qbman/Kconfig
+++ b/drivers/staging/fsl_qbman/Kconfig
@@ -35,13 +35,13 @@ config FSL_DPA_PORTAL_SHARE
 	default y
 
 config FSL_BMAN
-	bool "Freescale Buffer Manager support"
+	bool "Freescale Buffer Manager (BMan) support"
 	default y
 
 if FSL_BMAN
 
 config FSL_BMAN_CONFIG
-	bool "Bman device management"
+	bool "BMan device management"
 	default y
 	---help---
 	  If this linux image is running natively, you need this option. If this
@@ -49,13 +49,13 @@ config FSL_BMAN_CONFIG
 	  guest OS ("the control plane") needs this option.
 
 config FSL_BMAN_TEST
-	tristate "Bman self-tests"
+	tristate "BMan self-tests"
 	default n
 	---help---
-	  This option compiles self-test code for Bman.
+	  This option compiles self-test code for BMan.
 
 config FSL_BMAN_TEST_HIGH
-	bool "Bman high-level self-test"
+	bool "BMan high-level self-test"
 	depends on FSL_BMAN_TEST
 	default y
 	---help---
@@ -64,27 +64,27 @@ config FSL_BMAN_TEST_HIGH
 	  the cpu(s) the test executes on).
 
 config FSL_BMAN_TEST_THRESH
-	bool "Bman threshold test"
+	bool "BMan threshold test"
 	depends on FSL_BMAN_TEST
 	default y
 	---help---
-	  Multi-threaded (SMP) test of Bman pool depletion. A pool is seeded
+	  Multi-threaded (SMP) test of BMan pool depletion. A pool is seeded
 	  before multiple threads (one per cpu) create pool objects to track
 	  depletion state changes. The pool is then drained to empty by a
 	  "drainer" thread, and the other threads that they observe exactly
 	  the depletion state changes that are expected.
 
 config FSL_BMAN_DEBUGFS
-	tristate "Bman debugfs interface"
+	tristate "BMan debugfs interface"
 	depends on DEBUG_FS
 	default y
 	---help---
-	This option compiles bman debugfs code for Bman.
+	  This option compiles debugfs code for BMan.
 
 endif # FSL_BMAN
 
 config FSL_QMAN
-	bool "Freescale Queue Manager support"
+	bool "Freescale Queue Manager (QMan) support"
 	default y
 
 if FSL_QMAN
@@ -107,7 +107,7 @@ config FSL_QMAN_POLL_LIMIT
 	default 32
 
 config FSL_QMAN_CONFIG
-	bool "Qman device management"
+	bool "QMan device management"
 	default y
 	---help---
 	  If this linux image is running natively, you need this option. If this
@@ -115,13 +115,13 @@ config FSL_QMAN_CONFIG
 	  guest OS ("the control plane") needs this option.
 
 config FSL_QMAN_TEST
-	tristate "Qman self-tests"
+	tristate "QMan self-tests"
 	default n
 	---help---
-	  This option compiles self-test code for Qman.
+	  This option compiles self-test code for QMan.
 
 config FSL_QMAN_TEST_STASH_POTATO
-	bool "Qman 'hot potato' data-stashing self-test"
+	bool "QMan 'hot potato' data-stashing self-test"
 	depends on FSL_QMAN_TEST
 	default y
 	---help---
@@ -130,7 +130,7 @@ config FSL_QMAN_TEST_STASH_POTATO
 	  DQRR, data and context stashing always on.
 
 config FSL_QMAN_TEST_HIGH
-	bool "Qman high-level self-test"
+	bool "QMan high-level self-test"
 	depends on FSL_QMAN_TEST
 	default y
 	---help---
@@ -139,7 +139,7 @@ config FSL_QMAN_TEST_HIGH
 	  the cpu(s) the test executes on).
 
 config FSL_QMAN_TEST_ERRATA
-	bool "Qman errata-handling self-test"
+	bool "QMan errata-handling self-test"
 	depends on FSL_QMAN_TEST
 	default y
 	---help---
@@ -147,19 +147,19 @@ config FSL_QMAN_TEST_ERRATA
 	  testing that handling for known hardware-errata is correct.
 
 config FSL_QMAN_DEBUGFS
-	tristate "Qman debugfs interface"
+	tristate "QMan debugfs interface"
 	depends on DEBUG_FS
 	default y
 	---help---
-	This option compiles qman debugfs code for Qman.
+	  This option compiles debugfs code for QMan.
 
 # H/w settings that can be hard-coded for now.
 config FSL_QMAN_FQD_SZ
-	int "Size of Frame Queue Descriptor region"
+	int "size of Frame Queue Descriptor region"
 	default 9
 	---help---
-	This is the size of the FQD region defined as: PAGE_SIZE * (2^value)
-	ex: 9 => PAGE_SIZE * (2^9)
+	  This is the size of the FQD region defined as: PAGE_SIZE * (2^value)
+	  ex: 9 => PAGE_SIZE * (2^9)
 
 # Corenet initiator settings. Stash request queues are 4-deep to match cores'
 # ability to snart. Stash priority is 3, other priorities are 2.
