qbman: allocate portals, remove dts cpu-bindings.
This removes portal->cpu and portal->{kernel/usdpaa} associations from
the device trees, and changes the qbman driver initialisation model.
Portals are now "allocated" for initialisation and dynamically bound
to the required cpus. The default setup is to try to allocate a portal
for each cpu, and if that fails (there are fewer portals than cpus)
one of the cpus will share its portal with those cpus that don't have
one.

Bootargs "qportals" and "bportals" can be used to override the default
setup, however. As an example of the syntax;
       bportals=s0,1-3,s4
means that cpus 1,2,3 get their own "unshared" portals, cpus 0 and 4
get "shared" portals, and any other cpus will share from one of the
portals assigned to cpus 0 or 4, selected in a round-robin fashion.
(In this example, cpu 5 would share cpu 0's portal, cpu 6 would share
cpu4's portal, and cpu 7 would share cpu 0's portal.) If no cpus are
specified for sharing and sharing is required, one will be chosen by
the driver. If there are cpus are specified for sharing but sharing is
not required, the portals will be configured without sharing support
(this uses thinner locks).

Note that one consequence of this change is that we can't abuse the
device-tree to limit certain portals to certain pool channels for
application configuration, because we no longer know which portals will
be used for what. As such, the "fsl,qman-pool-channels" links are removed,
and the qman portal driver searches for the available pool channels
instead.

This also updates the PAMU driver to preconfigure portal stashing LIODNs
for L3 - the previous assumption of L1 assumed a cpu-assignment, which is
no longer the case.

Signed-off-by: Geoff Thorpe <Geoff.Thorpe@freescale.com>
[Kevin: Original patch taken from FSL
QorIQ-SDK-V1.2-SOURCE-20120614-yocto.iso image. Remove the mods for
the specific board's dts]
Signed-off-by: Kevin Hao <kexin.hao@windriver.com>
Signed-off-by: Tiejun Chen <tiejun.c

--- a/arch/powerpc/boot/dts/p4080ds.dts
+++ b/arch/powerpc/boot/dts/p4080ds.dts
@@ -1,7 +1,7 @@
 /*
  * P4080DS Device Tree Source
  *
- * Copyright 2009-2011 Freescale Semiconductor Inc.
+ * Copyright 2009-2012 Freescale Semiconductor Inc.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are met:
@@ -75,131 +75,10 @@
 
 	bportals: bman-portals@ff4000000 {
 		ranges = <0x0 0xf 0xf4000000 0x200000>;
-		bman-portal@0 {
-			cpu-handle = <&cpu0>;
-		};
-		bman-portal@4000 {
-			cpu-handle = <&cpu1>;
-		};
-		bman-portal@8000 {
-			cpu-handle = <&cpu2>;
-		};
-		bman-portal@c000 {
-			cpu-handle = <&cpu3>;
-		};
-		bman-portal@10000 {
-			cpu-handle = <&cpu4>;
-		};
-		bman-portal@14000 {
-			cpu-handle = <&cpu5>;
-		};
-		bman-portal@18000 {
-			cpu-handle = <&cpu6>;
-		};
-		bman-portal@1c000 {
-			cpu-handle = <&cpu7>;
-		};
-		bman-portal@20000 {
-		};
-		bman-portal@24000 {
-		};
-
-		buffer-pool@0 {
-			compatible = "fsl,p4080-bpool", "fsl,bpool";
-			fsl,bpid = <0>;
-			fsl,bpool-cfg = <0 0x100 0 1 0 0x100>;
-		};
 	};
 
 	qportals: qman-portals@ff4200000 {
 		ranges = <0x0 0xf 0xf4200000 0x200000>;
-		qportal0: qman-portal@0 {
-			cpu-handle = <&cpu0>;
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3
-						  &qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal1: qman-portal@4000 {
-			cpu-handle = <&cpu1>;
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3
-						  &qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal2: qman-portal@8000 {
-			cpu-handle = <&cpu2>;
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3
-						  &qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal3: qman-portal@c000 {
-			cpu-handle = <&cpu3>;
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3
-						  &qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal4: qman-portal@10000 {
-			cpu-handle = <&cpu4>;
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3
-						  &qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal5: qman-portal@14000 {
-			cpu-handle = <&cpu5>;
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3
-						  &qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal6: qman-portal@18000 {
-			cpu-handle = <&cpu6>;
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3
-						  &qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal7: qman-portal@1c000 {
-			cpu-handle = <&cpu7>;
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3
-						  &qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal8: qman-portal@20000 {
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3
-						  &qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal9: qman-portal@24000 {
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3
-						  &qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
 	};
 
 	soc: soc@ffe000000 {
@@ -616,3 +495,5 @@
 };
 
 /include/ "fsl/p4080si-post.dtsi"
+
+/include/ "fsl/qoriq-dpaa-res1.dtsi"
