--- a/arch/powerpc/boot/dts/p4080ds-usdpaa.dts
+++ b/arch/powerpc/boot/dts/p4080ds-usdpaa.dts
@@ -1,7 +1,7 @@
 /*
  * P4080DS Device Tree Source
  *
- * Copyright 2009-2011 Freescale Semiconductor Inc.
+ * Copyright 2009-2012 Freescale Semiconductor Inc.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are met:
@@ -35,160 +35,31 @@
 /include/ "p4080ds.dts"
 
 / {
-	bman-portals@ff4000000 {
-		bman-portal@0 {
-			cpu-handle = <&cpu0>;
-		};
-		bman-portal@4000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu1>;
-		};
-		bman-portal@8000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu2>;
-		};
-		bman-portal@c000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu3>;
-		};
-		bman-portal@10000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu4>;
-		};
-		bman-portal@14000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu5>;
-		};
-		bman-portal@18000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu6>;
-		};
-		bman-portal@1c000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu7>;
-		};
-		bman-portal@20000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu0>;
-		};
-		bman-portal@24000 {
-			cpu-handle = <&cpu1>;
-		};
-		/* BPID 0 is used a dynamic FQID allocator */
-		buffer-pool@0 {
-			compatible = "fsl,p4080-bpool", "fsl,bpool";
-			fsl,bpid = <0>;
-			fsl,bpool-cfg = <0 0x100 0 1 0 0x100>;
-		};
-		/* NB: the bpool-ethernet-seeds is not set to avoid buffer seeding,
-		 * because apps seed these pools buffers which are determined only
-		 * at run-time.
-		 * HOWEVER, the kernel driver requires the buffer-size and also
-		 * mis-interprets things if the base-address is zero (hence the bogus
-		 * values).
-		 */
-		bp7: buffer-pool@7 {
-			compatible = "fsl,p4080-bpool", "fsl,bpool";
-			fsl,bpid = <7>;
-			fsl,bpool-ethernet-cfg = <0 0 0 192 0 0xdeadbeef>;
-			fsl,bpool-thresholds = <0x400 0xc00 0x0 0x0>;
-		};
-		bp8: buffer-pool@8 {
-			compatible = "fsl,p4080-bpool", "fsl,bpool";
-			fsl,bpid = <8>;
-			fsl,bpool-ethernet-cfg = <0 0 0 576 0 0xabbaf00d>;
-			fsl,bpool-thresholds = <0x100 0x300 0x0 0x0>;
-		};
-		bp9: buffer-pool@9 {
-			compatible = "fsl,p4080-bpool", "fsl,bpool";
-			fsl,bpid = <9>;
-			fsl,bpool-ethernet-cfg = <0 0 0 1600 0 0xfeedabba>;
-			fsl,bpool-thresholds = <0x100 0x300 0x0 0x0>;
-		};
+	/* NB: "bpool-ethernet-seeds" is not set to avoid buffer seeding,
+	 * because apps seed these pools with buffers allocated at
+	 * run-time.
+	 * HOWEVER, the kernel driver requires the buffer-size so
+	 * "fsl,bpool-ethernet-cfg" is set. It also mis-interprets
+	 * things if the base-address is zero (hence the 0xdeadbeef
+	 * values).
+	 */
+	bp7: buffer-pool@7 {
+		compatible = "fsl,p4080-bpool", "fsl,bpool";
+		fsl,bpid = <7>;
+		fsl,bpool-ethernet-cfg = <0 0 0 192 0 0xdeadbeef>;
+		fsl,bpool-thresholds = <0x400 0xc00 0x0 0x0>;
 	};
-
-	qman-portals@ff4200000 {
-		qportal0: qman-portal@0 {
-			cpu-handle = <&cpu0>;
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3>;
-		};
-
-		qportal1: qman-portal@4000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu1>;
-			fsl,qman-pool-channels = <&qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal2: qman-portal@8000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu2>;
-			fsl,qman-pool-channels = <&qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal3: qman-portal@c000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu3>;
-			fsl,qman-pool-channels = <&qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal4: qman-portal@10000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu4>;
-			fsl,qman-pool-channels = <&qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal5: qman-portal@14000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu5>;
-			fsl,qman-pool-channels = <&qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal6: qman-portal@18000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu6>;
-			fsl,qman-pool-channels = <&qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal7: qman-portal@1c000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu7>;
-			fsl,qman-pool-channels = <&qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal8: qman-portal@20000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu0>;
-			fsl,qman-pool-channels = <&qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal9: qman-portal@24000 {
-			cpu-handle = <&cpu1>;
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3>;
-		};
+	bp8: buffer-pool@8 {
+		compatible = "fsl,p4080-bpool", "fsl,bpool";
+		fsl,bpid = <8>;
+		fsl,bpool-ethernet-cfg = <0 0 0 576 0 0xabbaf00d>;
+		fsl,bpool-thresholds = <0x100 0x300 0x0 0x0>;
+	};
+	bp9: buffer-pool@9 {
+		compatible = "fsl,p4080-bpool", "fsl,bpool";
+		fsl,bpid = <9>;
+		fsl,bpool-ethernet-cfg = <0 0 0 1600 0 0xfeedabba>;
+		fsl,bpool-thresholds = <0x100 0x300 0x0 0x0>;
 	};
 
 	fsl,dpaa {
