--- a/arch/powerpc/boot/dts/p5020ds-usdpaa.dts
+++ b/arch/powerpc/boot/dts/p5020ds-usdpaa.dts
@@ -1,7 +1,7 @@
 /*
  * P5020DS Device Tree Source
  *
- * Copyright 2010-2011 Freescale Semiconductor Inc.
+ * Copyright 2010-2012 Freescale Semiconductor Inc.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are met:
@@ -35,133 +35,47 @@
 /include/ "p5020ds.dts"
 
 / {
-	bman-portals@ff4000000 {
-		bman-portal@0 {
-			cpu-handle = <&cpu0>;
-		};
-		bman-portal@4000 {
-			cpu-handle = <&cpu1>;
-		};
-		bman-portal@8000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu0>;
-		};
-		bman-portal@c000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu1>;
-		};
-		bman-portal@10000 {
-		};
-		bman-portal@14000 {
-		};
-		bman-portal@18000 {
-		};
-		bman-portal@1c000 {
-		};
-		bman-portal@20000 {
-		};
-		bman-portal@24000 {
-		};
-		/* BPID 0 is used as dynamic FQID allocator */
-		buffer-pool@0 {
-			compatible = "fsl,p5020-bpool", "fsl,bpool";
-			fsl,bpid = <0>;
-			fsl,bpool-cfg = <0 0x100 0 1 0 0x100>;
-		};
-		/* NB: the bpool-ethernet-seeds is not set to avoid buffer seeding,
-		 * because apps seed these pools buffers which are determined only
-		 * at run-time.
-		 * HOWEVER, the kernel driver requires the buffer-size and also
-		 * mis-interprets things if the base-address is zero (hence the
-		 * bogus values).
-		 */
-		bp7: buffer-pool@7 {
-			compatible = "fsl,p5020-bpool", "fsl,bpool";
-			fsl,bpid = <7>;
-			fsl,bpool-ethernet-cfg = <0 0 0 192 0 0xdeadbeef>;
-			fsl,bpool-thresholds = <0x400 0xc00 0x0 0x0>;
-		};
-		bp8: buffer-pool@8 {
-			compatible = "fsl,p5020-bpool", "fsl,bpool";
-			fsl,bpid = <8>;
-			fsl,bpool-ethernet-cfg = <0 0 0 576 0 0xabbaf00d>;
-			fsl,bpool-thresholds = <0x100 0x300 0x0 0x0>;
-		};
-		bp9: buffer-pool@9 {
-			compatible = "fsl,p5020-bpool", "fsl,bpool";
-			fsl,bpid = <9>;
-			fsl,bpool-ethernet-cfg = <0 0 0 1600 0 0xfeedabba>;
-			fsl,bpool-thresholds = <0x100 0x300 0x0 0x0>;
-		};
-		bp10: buffer-pool@10 {
-			compatible = "fsl,p5020-bpool", "fsl,bpool";
-			fsl,bpid = <10>;
-			fsl,bpool-thresholds = <0x10 0x30 0x0 0x0>;
-		};
-		bp11: buffer-pool@11 {
-			compatible = "fsl,p5020-bpool", "fsl,bpool";
-			fsl,bpid = <11>;
-			fsl,bpool-thresholds = <0x100 0x300 0x0 0x0>;
-		};
-		bp12: buffer-pool@12 {
-			compatible = "fsl,p5020-bpool", "fsl,bpool";
-			fsl,bpid = <12>;
-			fsl,bpool-thresholds = <0x100 0x300 0x0 0x0>;
-		};
+	/* NB: "bpool-ethernet-seeds" is not set to avoid buffer seeding,
+	 * because apps seed these pools with buffers allocated at
+	 * run-time.
+	 * HOWEVER, the kernel driver requires the buffer-size so
+	 * "fsl,bpool-ethernet-cfg" is set. It also mis-interprets
+	 * things if the base-address is zero (hence the 0xdeadbeef
+	 * values).
+	 */
+	bp7: buffer-pool@7 {
+		compatible = "fsl,p5020-bpool", "fsl,bpool";
+		fsl,bpid = <7>;
+		fsl,bpool-ethernet-cfg = <0 0 0 192 0 0xdeadbeef>;
+		fsl,bpool-thresholds = <0x400 0xc00 0x0 0x0>;
 	};
 
-	qman-portals@ff4200000 {
-		qportal0: qman-portal@0 {
-			cpu-handle = <&cpu0>;
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3>;
-		};
-
-		qportal1: qman-portal@4000 {
-			cpu-handle = <&cpu1>;
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3>;
-		};
-
-		qportal2: qman-portal@8000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu0>;
-			fsl,qman-pool-channels = <&qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal3: qman-portal@c000 {
-			fsl,usdpaa-portal;
-			cpu-handle = <&cpu1>;
-			fsl,qman-pool-channels = <&qpool4 &qpool5 &qpool6
-						  &qpool7 &qpool8 &qpool9
-						  &qpool10 &qpool11 &qpool12
-						  &qpool13 &qpool14 &qpool15>;
-		};
-
-		qportal4: qman-portal@10000 {
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3>;
-		};
-
-		qportal5: qman-portal@14000 {
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3>;
-		};
-
-		qportal6: qman-portal@18000 {
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3>;
-		};
-
-		qportal7: qman-portal@1c000 {
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3>;
-		};
-
-		qportal8: qman-portal@20000 {
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3>;
-		};
-
-		qportal9: qman-portal@24000 {
-			fsl,qman-pool-channels = <&qpool1 &qpool2 &qpool3>;
-		};
+	bp8: buffer-pool@8 {
+		compatible = "fsl,p5020-bpool", "fsl,bpool";
+		fsl,bpid = <8>;
+		fsl,bpool-ethernet-cfg = <0 0 0 576 0 0xabbaf00d>;
+		fsl,bpool-thresholds = <0x100 0x300 0x0 0x0>;
+	};
+	bp9: buffer-pool@9 {
+		compatible = "fsl,p5020-bpool", "fsl,bpool";
+		fsl,bpid = <9>;
+		fsl,bpool-ethernet-cfg = <0 0 0 1600 0 0xfeedabba>;
+		fsl,bpool-thresholds = <0x100 0x300 0x0 0x0>;
+	};
+	bp10: buffer-pool@10 {
+		compatible = "fsl,p5020-bpool", "fsl,bpool";
+		fsl,bpid = <10>;
+		fsl,bpool-thresholds = <0x10 0x30 0x0 0x0>;
+	};
+	bp11: buffer-pool@11 {
+		compatible = "fsl,p5020-bpool", "fsl,bpool";
+		fsl,bpid = <11>;
+		fsl,bpool-thresholds = <0x100 0x300 0x0 0x0>;
+	};
+	bp12: buffer-pool@12 {
+		compatible = "fsl,p5020-bpool", "fsl,bpool";
+		fsl,bpid = <12>;
+		fsl,bpool-thresholds = <0x100 0x300 0x0 0x0>;
 	};
 
 	fsl,dpaa {
