--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -220,19 +220,22 @@ config ENCLOSURE_SERVICES
 	  driver (SCSI/ATA) which supports enclosures
 	  or a SCSI enclosure device (SES) to use these services.
 
-config FSL_USDPAA_SHMEM
-	bool "Freescale USDPAA shared memory driver"
-	depends on PPC_85xx || PPC_E500MC
+config FSL_USDPAA
+	bool "Freescale USDPAA process driver"
+	depends on FSL_DPA
+	default y
 	help
-	  This driver provides user-space access to a large contiguous
-	  memory allocation, reserved for use by Freescale USDPAA (User
-	  Space DataPath Acceleration Architecture) applications. This
-	  driver includes a private ioctl() interface for conveying the
-	  size and (DMA-)base-address of the memory region. It is also
-	  hooked by the MMU code, such that a single TLB1 mapping is
-	  created for the entire region when the first fault occurs.
-	  The intention is for this driver to be replaced by HugeTLB
-	  facilities, once they are available for USDPAA platforms.
+	  This driver provides user-space access to kernel-managed
+	  resource interfaces for USDPAA applications, on the assumption
+	  that each process will open this device once. Specifically, this
+	  device exposes functionality that would be awkward if exposed
+	  via the portal devices - ie. this device exposes functionality
+	  that is inherently process-wide rather than portal-specific.
+	  This device is necessary for obtaining access to DMA memory and
+	  for allocation of Qman and Bman resources. In short, if you wish
+	  to use USDPAA applications, you need this.
+
+	  If unsure, say Y.
 
 config SGI_XP
 	tristate "Support communication between SGI SSIs"
