--- a/arch/powerpc/boot/dts/fsl/p5020si-post.dtsi
+++ b/arch/powerpc/boot/dts/fsl/p5020si-post.dtsi
@@ -355,7 +355,13 @@
 		};
 
 /include/ "qoriq-sata2-0.dtsi"
+	sata@220000 {
+		compatible = "fsl,p5020-sata", "fsl,pq-sata-v2";
+	};
 /include/ "qoriq-sata2-1.dtsi"
+	sata@221000 {
+		compatible = "fsl,p5020-sata", "fsl,pq-sata-v2";
+	};
 /include/ "qoriq-sec4.2-0.dtsi"
 /include/ "qoriq-raid1.0-0.dtsi"
 };
