dpaa_eth: Add multiple schemes of FQ-to-WQ assignment
The current FQ assignment scheme poses memory problems under high PCD
traffic on lots of ingress queues, because the Tx Confirm queues
(greatly outnumbered by PCD) may pile up PFDRs and eventually exhaust
QMan's memory. In certain scenarios, even the kernel memory may be
depleted.

Added alternative fq-to-wq assignment functions, chosen between at
compile-time.

Signed-off-by: Bogdan Hamciuc <bogdan.hamciuc@freescale.com>
[Kevin: Original patch taken from FSL
QorIQ-SDK-V1.2-SOURCE-20120614-yocto.iso image]
Signed-off-by: Kevin Hao <kexin.hao@windriver.com>

--- a/drivers/net/ethernet/freescale/Kconfig
+++ b/drivers/net/ethernet/freescale/Kconfig
@@ -133,6 +133,27 @@ config FSL_DPA_1588
 	depends on DPA
 	default n
 
+choice DPA_ETH_WQ_ASSIGN
+	prompt "WorkQueue assignment scheme for FrameQueues"
+	default DPA_ETH_WQ_MULTI
+	help
+	  Selects the FrameQueue to WorkQueue assignment scheme.
+
+	config DPA_ETH_WQ_LEGACY
+		bool "Legacy WQ assignment"
+		help
+		  Statically-defined FQIDs are round-robin assigned to all WQs (0..7). PCD queues are always
+		  in this category. Other frame queues may be those used for "MAC-less" or "shared MAC" configurations
+		  of the driver.
+		  Dynamically-defined FQIDs all go to WQ7.
+	config DPA_ETH_WQ_MULTI
+		bool "Multi-WQ assignment"
+		help
+		  Tx Confirmation FQs go to WQ1.
+		  Rx Default, Tx and PCD FQs go to WQ3.
+		  Rx Error and Tx Error FQs go to WQ2.
+endchoice
+
 config DPAA_ETH_UNIT_TESTS
 	bool "Run Unit Tests for DPAA Ethernet"
 	depends on DPA
