gianfar: hardware TCP receive offload
Insert TCP stream rules into eTSEC filer table for offloading TCP receive.
eTSEC will accelerate TCP receive processing for a given stream as soon as
its data volume exceeds 1MB.

Signed-off-by: Jiajun Wu <b06378@freescale.com>
Signed-off-by: Claudiu Manoil <claudiu.manoil@freescale.com>
[Kevin: Original patch taken from FSL
QorIQ-SDK-V1.2-SOURCE-20120614-yocto.iso image. Just some minor context
mods in order to port to 3.4 kernel.]
Signed-off-by: Kevin Hao <kexin.hao@windriver.com>
Signed-off-by: Tiejun Chen <tiejun.chen@windriver.com>

--- a/drivers/net/ethernet/freescale/Kconfig
+++ b/drivers/net/ethernet/freescale/Kconfig
@@ -64,6 +64,16 @@ config FSL_PQ_MDIO
 
 source "drivers/net/ethernet/freescale/dpa/NetCommSw/Kconfig"
 
+config GFAR_HW_TCP_RECEIVE_OFFLOAD
+	default n
+	bool "Hardware TCP receive offload"
+	depends on GIANFAR && EXPERIMENTAL && !BONDING
+	help
+	  Hardware offload receive large TCP data.
+
+	  Inserts TCP stream rules into eTSEC filer table,
+	  to offload TCP receive.
+
 config UCC_GETH
 	tristate "Freescale QE Gigabit Ethernet"
 	depends on QUICC_ENGINE
