powerpc/85xx: fsl-pamu: put the PAACT/OMT in its own coherence subdomain (Erratum A-004510)
Implement the work-around for erratum A-004510 in the Freescale PAMU device
driver.

Erratum A004510 says that under certain load conditions, modified
cache lines can be discarded, causing data corruption.  The work-around
involves multiple steps, one of which is to isolate the PAMU data structures
(PAACT and OMT) from the rest of the system address space before the PAMU is
enabled.

We also need to use a spinlock to ensure that only one core at a time is
reading or writing from these data structures.

The work-around is fully documented in Application Note AN4493.

Signed-off-by: Timur Tabi <timur@freescale.com>
[Kevin: Original patch taken from FSL
QorIQ-SDK-V1.2-SOURCE-20120614-yocto.iso image]
Signed-off-by: Kevin Hao <kexin.hao@windriver.com>

--- a/arch/powerpc/Kconfig
+++ b/arch/powerpc/Kconfig
@@ -723,6 +723,19 @@ config FSL_PAMU
 	help
 	  Freescale PAMU/IOMMU support
 
+config FSL_PAMU_ERRATUM_A_004510
+	bool "Enable PAMU work-around for erratum A-004510"
+	depends on FSL_PAMU
+	# For now, enable this by default, so that we don't have to update
+	# defconfigs.  All current PAMU-enabled SOCs have the erratum.
+	default y
+	help
+	  Select this option to enable a work-around for erratum A-004510
+	  in the Freescale PAMU device driver.  Erratum A-004510 says that
+	  under certain load conditions, modified cache lines can be discarded,
+	  causing data corruption.  This option enables the PAMU portion of
+	  the work-around.
+
 config HAS_FSL_QBMAN
 	bool "Datapath Acceleration Queue and Buffer management"
 	help
